<resources>
    <string name="app_name">NeWork</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_the_password">Enter the password</string>
    <string name="an_error_has_occurred">An error has occurred</string>
    <string name="cancel_text">Cancel</string>
    <string name="authorization">Authorization</string>
    <string name="registration_text">Registration</string>
    <string name="register_text">Register</string>
    <string name="name_text">Name</string>
    <string name="password_confirmation_text">Password confirmation</string>
    <string name="enter_yor_name">Enter your name</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="an_unknown_error_has_occurred">An unknown error has occurred</string>
    <string name="take_photo_text">Take a photo</string>
    <string name="choose_photo_text">Choose a photo</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="mentions">Mentions</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="do_you_want_to_login">You are not logged in.\nPass authorization?</string>
    <string name="do_you_really_want_to_get_out">Do you really want to get out?\nAll unsaved data will be lost.</string>
    <string name="yes_text">Yes</string>
    <string name="add_post">New post</string>
    <string name="edit_post">Edit post</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="save">Save</string>
    <string name="retry_loading">Retry</string>
    <string name="undefined">[Undefined]</string>
    <string name="me_text">Me</string>
    <string name="link_text">Link</string>
    <string name="show_current_location">Show current location</string>
    <string name="err_current_geo">Couldn\'t get the current location: Check the geolocation access on the device</string>
    <string name="request_permission_geo_rationale">Please provide access to geolocation so that we can make the use of the application convenient for you</string>
    <string name="access_to_geo">Access to geolocation</string>
    <string name="check_geo_permission">Check the permission to access geolocation</string>
    <string name="set_location">Set location</string>
    <string name="location">Location</string>
    <string name="event_type">Event type</string>
    <string name="event_date_text">Date of the event</string>
    <string name="attachment">Attachment</string>
    <string name="user">User</string>
    <string name="add_event">Add an event</string>
    <string name="edit_event">Edit event</string>
    <string name="marked_users">Marked users</string>
    <string name="you_have_been_marked">You have been marked</string>
    <string name="mark_users">Mark users</string>
    <string name="speakers">Speakers</string>
    <string name="select_speakers">Select speakers</string>
    <string name="participants">Participants</string>
    <string name="event_date">Event date</string>
    <string name="event_time">Event time</string>
    <string name="select_participants">Select participants</string>
    <string name="my_wall">My wall</string>
    <string name="feed">Feed</string>
    <string name="jobs">Jobs</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="position">Position</string>
    <string name="name">Name</string>
    <string name="job">Job</string>
    <string name="err_dates_compare">Start date before end date</string>
    <string name="error_in_form_data">Error in form data:</string>
    <string name="make_sure_required_fields_filled">Make sure that all required fields are filled in</string>
    <string name="required_field_tag">*</string>
    <string name="content">Content</string>
    <string name="pick_photo">Pick photo</string>
    <string name="pick_video">Pick video</string>
    <string name="error_network">A network error has occurred</string>
    <string name="error_unknown">An unknown error has occurred</string>
    <string name="error_empty_response">The server returned an empty response</string>
    <string name="pick_audio">Pick an audio recording</string>
    <string name="rewind_audio">Rewind audio</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="permission_necessary">Permission necessary</string>
    <string name="request">Request</string>
    <string name="external_storage">External storage</string>
    <string name="full_screen">Full screen</string>
    <string name="video">Video</string>
</resources>