<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/navigationFeed">
        <item
            android:id="@+id/feed"
            android:title="@string/feed"
            app:showAsAction="never" />
    </group>
    <group android:id="@+id/navigationMyWall">
        <item
            android:id="@+id/myWall"
            android:title="@string/my_wall"
            app:showAsAction="never" />
    </group>
    <group android:id="@+id/unauthenticated">
        <item
            android:id="@+id/signIn"
            android:title="@string/sign_in"
            app:showAsAction="never" />
        <item
            android:id="@+id/signUp"
            android:title="@string/sign_up"
            app:showAsAction="never" />
    </group>
    <group android:id="@+id/authenticated">
        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            app:showAsAction="never" />
    </group>
</menu>