<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/feedFragment">

    <fragment
        android:id="@+id/authorizationFragment"
        android:name="ru.netology.nework.ui.AuthorizationFragment"
        android:label="@string/authorization"
        tools:layout="@layout/fragment_authorization" />
    <fragment
        android:id="@+id/feedFragment"
        android:name="ru.netology.nework.ui.FeedFragment"
        android:label="@string/app_name" >
        <action
            android:id="@+id/action_feedFragment_to_authFragment"
            app:destination="@id/authorizationFragment" />
        <action
            android:id="@+id/action_feedFragment_to_registrationFragment"
            app:destination="@id/registrationFragment" />
        <action
            android:id="@+id/action_feedFragment_to_newPostFragment"
            app:destination="@id/newPostFragment" />
        <action
            android:id="@+id/action_feedFragment_to_mapFragment"
            app:destination="@id/mapFragment" />
        <action
            android:id="@+id/action_feedFragment_to_viewPhotoFragment"
            app:destination="@id/viewPhotoFragment" />
        <action
            android:id="@+id/action_feedFragment_to_videoFragment"
            app:destination="@id/videoFragment" />
    </fragment>
    <fragment
        android:id="@+id/registrationFragment"
        android:name="ru.netology.nework.ui.RegistrationFragment"
        android:label="@string/registration_text" />
    <fragment
        android:id="@+id/newPostFragment"
        android:name="ru.netology.nework.ui.NewPostFragment"
        android:label="@string/add_post"
        tools:layout="@layout/fragment_new_post" >
        <argument
            android:name="isNewPost"
            app:argType="boolean"
            android:defaultValue="false" />
        <action
            android:id="@+id/action_newPostFragment_to_mapFragment"
            app:destination="@id/mapFragment" />
        <argument
            android:name="editingData"
            app:argType="ru.netology.nework.models.DataItem"
            app:nullable="true"
            android:defaultValue="@null" />
        <argument
            android:name="isNewEvent"
            app:argType="boolean"
            android:defaultValue="false" />
        <action
            android:id="@+id/action_newPostFragment_to_userListFragment"
            app:destination="@id/userListFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapFragment"
        android:name="ru.netology.nework.ui.MapFragment"
        android:label="@string/set_location"
        tools:layout="@layout/fragment_map">
        <argument
            android:name="coordinates"
            android:defaultValue="@null"
            app:argType="ru.netology.nework.models.Coordinates"
            app:nullable="true" />
        <argument
            android:name="readOnly"
            android:defaultValue="false"
            app:argType="boolean" />
    </fragment>
    <fragment
        android:id="@+id/userListFragment"
        android:name="ru.netology.nework.ui.UserListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_user_list" >
        <argument
            android:name="selectedUsersIds"
            app:argType="long[]" />
        <argument
            android:name="title"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="filteredMe"
            app:argType="boolean"
            android:defaultValue="true" />
    </fragment>
    <fragment
        android:id="@+id/newJobFragment"
        android:name="ru.netology.nework.ui.NewJobFragment"
        android:label="@string/job"
        tools:layout="@layout/job_card" >
        <argument
            android:name="job"
            app:argType="ru.netology.nework.models.jobs.Job"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
    <fragment
        android:id="@+id/userPageFragment"
        android:name="ru.netology.nework.ui.UserPageFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_user_page">
        <deepLink
            android:id="@+id/deepLink"
            android:autoVerify="true"
            app:uri="diplomapp://nework/userPage?userId={userId}" />
        <argument
            android:name="userId"
            android:defaultValue="0L"
            app:argType="long" />
        <action
            android:id="@+id/action_userPageFragment_to_newJobFragment"
            app:destination="@id/newJobFragment" />
        <action
            android:id="@+id/action_userPageFragment_to_newPostFragment"
            app:destination="@id/newPostFragment" />
        <action
            android:id="@+id/action_userPageFragment_to_mapFragment"
            app:destination="@id/mapFragment" />
        <action
            android:id="@+id/action_userPageFragment_to_viewPhotoFragment"
            app:destination="@id/viewPhotoFragment" />
        <action
            android:id="@+id/action_userPageFragment_to_videoFragment"
            app:destination="@id/videoFragment" />
    </fragment>
    <action android:id="@+id/action_global_userPageFragment" app:destination="@id/userPageFragment" />
    <fragment
        android:id="@+id/viewPhotoFragment"
        android:name="ru.netology.nework.ui.ViewPhotoFragment"
        tools:layout="@layout/fragment_view_photo">
        <argument
            android:name="photoUrl"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/videoFragment"
        android:name="ru.netology.nework.ui.VideoFragment"
        android:label="@string/video"
        tools:layout="@layout/video_player">
        <argument
            android:name="dataItem"
            app:argType="ru.netology.nework.models.DataItem" />
    </fragment>
</navigation>